# hf

./: CMakeLists.txt  NHF1_terv_doc.doc  NHF1spec.doc  aramkorielem.cpp  aramkorielem.h  connection.cpp  connection.h  forras.cpp  forras.h  halozat.cpp  halozat.h  invereter.cpp  invereter.h  kombhal.cpp  kombhal.h  main.cpp  norgate.cpp  norgate.h  teszthalozat.cpp  teszthalozat.h  todo  umltest.EAP  uzenet.cpp  uzenet.h  vezetek.cpp  vezetek.h  ~$F1_terv_doc.doc
html/: annotated.html  classes.html  classuzenet-members.html  classuzenet.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  uzenet_8h_source.html
html/search/: all_0.js  all_1.js  classes_0.js  functions_1.js  searchdata.js
latex/: annotated.tex  classuzenet.tex  files.tex  refman.tex  uzenet_8h_source.tex
